# OpenGLProject

./: CMakeLists.txt  folder_structure.txt
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/ModelLoader/: ModelLoader.cpp  ModelLoader.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/engin/: Mesh.h
src/platform/: FileDialog.cpp  FileDialog.h
